trunk/yal2jvm.java
/* Generated By:JJTree&JavaCC: Do not edit this line. yal2jvm.java */
// código Java que invoca o parser
  public class yal2jvm/*@bgen(jjtree)*/implements yal2jvmTreeConstants, yal2jvmConstants {/*@bgen(jjtree)*/
  protected static JJTyal2jvmState jjtree = new JJTyal2jvmState();public static void main(String args[]) throws ParseException {
       // criação do objecto utilizando o constructor com argumento para
       // ler do standard input (teclado)
       yal2jvm newParser = new yal2jvm(System.in);
      // newParser.Module();

      SimpleNode root = newParser.parserBegin(); //devolve referência para o nó raiz da árvore
    //  System.out.println("Valor da expressão: "+myCalc.eval(root));
      root.dump("");
     }

  static final public SimpleNode parserBegin() throws ParseException {
                            /*@bgen(jjtree) parserBegin */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSERBEGIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Module();
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
              {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Module() throws ParseException {
                       Token t0;
    jj_consume_token(MODULE);
    t0 = jj_consume_token(ID);
                     SimpleNode jjtn001 = new SimpleNode(JJTMID);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
    try {
                     jjtree.closeNodeScope(jjtn001, true);
                     jjtc001 = false;
                    jjtn001.val = t0.image;
    } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001, true);
                     }
    }
    jj_consume_token(LCHAVETA);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
     SimpleNode jjtn002 = new SimpleNode(JJTDECL);
     boolean jjtc002 = true;
     jjtree.openNodeScope(jjtn002);
      try {
        Declaration();
      } catch (Throwable jjte002) {
     if (jjtc002) {
       jjtree.clearNodeScope(jjtn002);
       jjtc002 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte002 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte002;}
     }
     if (jjte002 instanceof ParseException) {
       {if (true) throw (ParseException)jjte002;}
     }
     {if (true) throw (Error)jjte002;}
      } finally {
     if (jjtc002) {
       jjtree.closeNodeScope(jjtn002, true);
     }
      }
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
     SimpleNode jjtn003 = new SimpleNode(JJTFUNC);
     boolean jjtc003 = true;
     jjtree.openNodeScope(jjtn003);
      try {
        Function();
      } catch (Throwable jjte003) {
     if (jjtc003) {
       jjtree.clearNodeScope(jjtn003);
       jjtc003 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte003 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte003;}
     }
     if (jjte003 instanceof ParseException) {
       {if (true) throw (ParseException)jjte003;}
     }
     {if (true) throw (Error)jjte003;}
      } finally {
     if (jjtc003) {
       jjtree.closeNodeScope(jjtn003, true);
     }
      }
    }
    jj_consume_token(RCHAVETA);
  }

  static final public void Declaration() throws ParseException {
                            Token t0;
    t0 = jj_consume_token(ID);
            SimpleNode jjtn001 = new SimpleNode(JJTDECLID);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
    try {
            jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
           jjtn001.val = t0.image;
    } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 31:
      jj_consume_token(31);
      jj_consume_token(32);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
                    SimpleNode jjtn002 = new SimpleNode(JJTARRAYSIZE);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
        try {
          ArraySize();
        } catch (Throwable jjte002) {
                    if (jjtc002) {
                      jjtree.clearNodeScope(jjtn002);
                      jjtc002 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte002 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte002;}
                    }
                    if (jjte002 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte002;}
                    }
                    {if (true) throw (Error)jjte002;}
        } finally {
                    if (jjtc002) {
                      jjtree.closeNodeScope(jjtn002, true);
                    }
        }
        jj_consume_token(32);
        break;
      case ADDSUB_OP:
      case INTEGER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
          jj_consume_token(ADDSUB_OP);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
                                 SimpleNode jjtn003 = new SimpleNode(JJTINICVAR);
                                 boolean jjtc003 = true;
                                 jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(INTEGER);
        } finally {
                                 if (jjtc003) {
                                   jjtree.closeNodeScope(jjtn003, true);
                                 }
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(PVIRG);
  }

  static final public void Function() throws ParseException {
                         Token t0; Token t1; Token t2;
    jj_consume_token(FUNCTION);
    t0 = jj_consume_token(ID);
                         SimpleNode jjtn001 = new SimpleNode(JJTFUNCID);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
    try {
                         jjtree.closeNodeScope(jjtn001, true);
                         jjtc001 = false;
                        jjtn001.val = t0.image;
    } finally {
                         if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001, true);
                         }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
    case 31:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        jj_consume_token(32);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(ASSIGN);
      t2 = jj_consume_token(ID);
                        SimpleNode jjtn002 = new SimpleNode(JJTASSIGNID);
                        boolean jjtc002 = true;
                        jjtree.openNodeScope(jjtn002);
      try {
                        jjtree.closeNodeScope(jjtn002, true);
                        jjtc002 = false;
                       jjtn002.val = t2.image;
      } finally {
                        if (jjtc002) {
                          jjtree.closeNodeScope(jjtn002, true);
                        }
      }
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
              SimpleNode jjtn003 = new SimpleNode(JJTARGS);
              boolean jjtc003 = true;
              jjtree.openNodeScope(jjtn003);
        try {
          Varlist();
        } catch (Throwable jjte003) {
              if (jjtc003) {
                jjtree.clearNodeScope(jjtn003);
                jjtc003 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte003 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte003;}
              }
              if (jjte003 instanceof ParseException) {
                {if (true) throw (ParseException)jjte003;}
              }
              {if (true) throw (Error)jjte003;}
        } finally {
              if (jjtc003) {
                jjtree.closeNodeScope(jjtn003, true);
              }
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
                SimpleNode jjtn004 = new SimpleNode(JJTARGS);
                boolean jjtc004 = true;
                jjtree.openNodeScope(jjtn004);
        try {
          Varlist();
        } catch (Throwable jjte004) {
                if (jjtc004) {
                  jjtree.clearNodeScope(jjtn004);
                  jjtc004 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte004 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte004;}
                }
                if (jjte004 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte004;}
                }
                {if (true) throw (Error)jjte004;}
        } finally {
                if (jjtc004) {
                  jjtree.closeNodeScope(jjtn004, true);
                }
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LCHAVETA);
               SimpleNode jjtn005 = new SimpleNode(JJTFUNCBODY);
               boolean jjtc005 = true;
               jjtree.openNodeScope(jjtn005);
    try {
      Stmtlst();
    } catch (Throwable jjte005) {
               if (jjtc005) {
                 jjtree.clearNodeScope(jjtn005);
                 jjtc005 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte005 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte005;}
               }
               if (jjte005 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte005;}
               }
               {if (true) throw (Error)jjte005;}
    } finally {
               if (jjtc005) {
                 jjtree.closeNodeScope(jjtn005, true);
               }
    }
    jj_consume_token(RCHAVETA);
  }

  static final public void Varlist() throws ParseException {
                        Token t0; Token t1;
    t0 = jj_consume_token(ID);
                SimpleNode jjtn001 = new SimpleNode(JJTVARLISTID);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
    try {
                jjtree.closeNodeScope(jjtn001, true);
                jjtc001 = false;
               jjtn001.val=t0.image;
    } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001, true);
                }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 31:
      jj_consume_token(31);
      jj_consume_token(32);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRG);
      t1 = jj_consume_token(ID);
                                                                                  SimpleNode jjtn002 = new SimpleNode(JJTVARLISTID2);
                                                                                  boolean jjtc002 = true;
                                                                                  jjtree.openNodeScope(jjtn002);
      try {
                                                                                  jjtree.closeNodeScope(jjtn002, true);
                                                                                  jjtc002 = false;
                                                                                 jjtn002.val=t1.image;
      } finally {
                                                                                  if (jjtc002) {
                                                                                    jjtree.closeNodeScope(jjtn002, true);
                                                                                  }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        jj_consume_token(32);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
    }
  }

  static final public void ArrayElement() throws ParseException {
                             Token t0;
    t0 = jj_consume_token(ID);
             SimpleNode jjtn001 = new SimpleNode(JJTARRAYID);
             boolean jjtc001 = true;
             jjtree.openNodeScope(jjtn001);
    try {
             jjtree.closeNodeScope(jjtn001, true);
             jjtc001 = false;
            jjtn001.val = t0.image;
    } finally {
             if (jjtc001) {
               jjtree.closeNodeScope(jjtn001, true);
             }
    }
    jj_consume_token(31);
    jj_consume_token(32);
  }

  static final public void ScalarElement() throws ParseException {
                        /*@bgen(jjtree) ScalarElement */
                        SimpleNode jjtn000 = new SimpleNode(JJTSCALARELEMENT);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t0;
    try {
      t0 = jj_consume_token(ID);
            SimpleNode jjtn001 = new SimpleNode(JJTSCALARID);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
            jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
           jjtn001.val=t0.image;
      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Stmtlst() throws ParseException {
                  /*@bgen(jjtree) Stmtlst */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMTLST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
        case IF:
        case ID:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
        Stmt();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      While();
      break;
    case IF:
      If();
      break;
    case ID:
      if (jj_2_1(3)) {
        Assign();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          Call();
          jj_consume_token(PVIRG);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Assign() throws ParseException {
                 /*@bgen(jjtree) Assign */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Lhs();
      jj_consume_token(ASSIGN);
      Rhs();
      jj_consume_token(PVIRG);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Lhs() throws ParseException {
              /*@bgen(jjtree) Lhs */
              SimpleNode jjtn000 = new SimpleNode(JJTLHS);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token t0; Token tSize;
    try {
      //ArrayAccess() | ScalarAccess()
       t0 = jj_consume_token(ID);
          jjtn000.val = t0.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        Index();
        jj_consume_token(32);
        break;
      default:
        jj_la1[17] = jj_gen;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 33:
          jj_consume_token(33);
          tSize = jj_consume_token(SIZE);
                                                                              jjtn000.val=tSize.image;
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void Rhs() throws ParseException {
              /*@bgen(jjtree) Rhs */
              SimpleNode jjtn000 = new SimpleNode(JJTRHS);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token tOp;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDSUB_OP:
      case INTEGER:
      case ID:
    SimpleNode jjtn001 = new SimpleNode(JJTTERM);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
        try {
          Term();
        } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
        } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
        case ARITH_OP:
        case BITWISE_OP:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ARITH_OP:
                    SimpleNode jjtn002 = new SimpleNode(JJTARITMOP);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
            try {
              tOp = jj_consume_token(ARITH_OP);
            } finally {
                    if (jjtc002) {
                      jjtree.closeNodeScope(jjtn002, true);
                    }
            }
            break;
          case BITWISE_OP:
                                              SimpleNode jjtn003 = new SimpleNode(JJTBITOP);
                                              boolean jjtc003 = true;
                                              jjtree.openNodeScope(jjtn003);
            try {
              tOp = jj_consume_token(BITWISE_OP);
            } finally {
                                              if (jjtc003) {
                                                jjtree.closeNodeScope(jjtn003, true);
                                              }
            }
            break;
          case ADDSUB_OP:
                                                                        SimpleNode jjtn004 = new SimpleNode(JJTADDSUBOP);
                                                                        boolean jjtc004 = true;
                                                                        jjtree.openNodeScope(jjtn004);
            try {
              tOp = jj_consume_token(ADDSUB_OP);
            } finally {
                                                                        if (jjtc004) {
                                                                          jjtree.closeNodeScope(jjtn004, true);
                                                                        }
            }
            break;
          default:
            jj_la1[18] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
                                                                                                  jjtn000.val=tOp.image;
                                                                                                                            SimpleNode jjtn005 = new SimpleNode(JJTTERM2);
                                                                                                                            boolean jjtc005 = true;
                                                                                                                            jjtree.openNodeScope(jjtn005);
          try {
            Term();
          } catch (Throwable jjte005) {
                                                                                                                            if (jjtc005) {
                                                                                                                              jjtree.clearNodeScope(jjtn005);
                                                                                                                              jjtc005 = false;
                                                                                                                            } else {
                                                                                                                              jjtree.popNode();
                                                                                                                            }
                                                                                                                            if (jjte005 instanceof RuntimeException) {
                                                                                                                              {if (true) throw (RuntimeException)jjte005;}
                                                                                                                            }
                                                                                                                            if (jjte005 instanceof ParseException) {
                                                                                                                              {if (true) throw (ParseException)jjte005;}
                                                                                                                            }
                                                                                                                            {if (true) throw (Error)jjte005;}
          } finally {
                                                                                                                            if (jjtc005) {
                                                                                                                              jjtree.closeNodeScope(jjtn005, true);
                                                                                                                            }
          }
          break;
        default:
          jj_la1[19] = jj_gen;
          ;
        }
        break;
      case 31:
        jj_consume_token(31);
         SimpleNode jjtn006 = new SimpleNode(JJTARRSIZE);
         boolean jjtc006 = true;
         jjtree.openNodeScope(jjtn006);
        try {
          ArraySize();
        } catch (Throwable jjte006) {
         if (jjtc006) {
           jjtree.clearNodeScope(jjtn006);
           jjtc006 = false;
         } else {
           jjtree.popNode();
         }
         if (jjte006 instanceof RuntimeException) {
           {if (true) throw (RuntimeException)jjte006;}
         }
         if (jjte006 instanceof ParseException) {
           {if (true) throw (ParseException)jjte006;}
         }
         {if (true) throw (Error)jjte006;}
        } finally {
         if (jjtc006) {
           jjtree.closeNodeScope(jjtn006, true);
         }
        }
        jj_consume_token(32);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void ArraySize() throws ParseException {
                          Token tSize;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
   SimpleNode jjtn001 = new SimpleNode(JJTSCALAR);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
      try {
        ScalarAccess();
      } catch (Throwable jjte001) {
   if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
      } finally {
   if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, true);
   }
      }
      break;
    case INTEGER:
      tSize = jj_consume_token(INTEGER);
                                            SimpleNode jjtn002 = new SimpleNode(JJTINTEGER);
                                            boolean jjtc002 = true;
                                            jjtree.openNodeScope(jjtn002);
      try {
                                            jjtree.closeNodeScope(jjtn002, true);
                                            jjtc002 = false;
                                           jjtn002.val=tSize.image;
      } finally {
                                            if (jjtc002) {
                                              jjtree.closeNodeScope(jjtn002, true);
                                            }
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
